--- a/ZBD/Pages/Bohaterowie Folder/BohaterowieDisplay.razor
+++ b/ZBD/Pages/Bohaterowie Folder/BohaterowieDisplay.razor
@@ -55,34 +55,36 @@
                 <div>
                     @if(champion.Kontras.Count() > 0)
                     {
-                        <label><strong>Kontry:</strong></label>
-                        <table class="table">
-                            <thead>
-                                <tr>
-                                    <th></th>
-                                    <th></th>
-                                    <th></th>
-                                    <th></th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @foreach (var counter in champion.Kontras)
-                                {
+                        <label>
+                            <strong>Kontry:</strong>
+                            <table class="table">
+                                <thead>
                                     <tr>
-                                        <td>
-                                            <img src="@counter.Ikona" width="64px" height="64px" />
-                                        </td>
-                                        <td>@counter.Nazwa</td>
-                                        <td>
-                                            <button class="btn btn-primary oi oi-pencil" @onclick="(() => ShowEditCounter(champion.Nazwa, counter.Nazwa))"></button>
-                                        </td>
-                                        <td>
-                                            <button class="btn btn-danger oi oi-trash" @onclick="async ()=> await DeleteCounter(champion.Nazwa, counter.Nazwa)"></button>
-                                        </td>
+                                        <th></th>
+                                        <th></th>
+                                        <th></th>
+                                        <th></th>
                                     </tr>
-                                }
-                            </tbody>
-                        </table>
+                                </thead>
+                                <tbody>
+                                    @foreach (var counter in champion.Kontras)
+                                    {
+                                        <tr>
+                                            <td>
+                                                <img src="@counter.Ikona" width="64px" height="64px" />
+                                            </td>
+                                            <td>@counter.Nazwa</td>
+                                            <td>
+                                                <button class="btn btn-primary oi oi-pencil" @onclick="(() => ShowEditCounter(champion.Nazwa, counter.Nazwa))"></button>
+                                            </td>
+                                            <td>
+                                                <button class="btn btn-danger oi oi-trash" @onclick="async ()=> await DeleteCounter(champion.Nazwa, counter.Nazwa)"></button>
+                                            </td>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
+                        </label>
                     }
                 </div>
                 
