--- a/ZBD/Pages/Druzyny Folder/DruzynyDisplay.razor
+++ b/ZBD/Pages/Druzyny Folder/DruzynyDisplay.razor
@@ -26,7 +26,7 @@
                 @foreach (var member in members)
                 {
                     <tr>
-                        <td>@member.Nick</td>
+                        <td><a href="/graczezawodowi/@member.Nick">@member.Nick</a></td>
                         <td>@member.ImieINazwisko</td>
                         <td>@member.Kraj</td>
                         <td>@member.Rola</td>
