--- a/ZBD/Pages/Gracze Zawodowi Folder/GraczeZawodowiLista.razor
+++ b/ZBD/Pages/Gracze Zawodowi Folder/GraczeZawodowiLista.razor
@@ -24,7 +24,7 @@
 				<img src="@pro.Zdjecie" alt="@pro.Nick" />
 				<td>@pro.Nick</td>
 				<td>@pro.ImieINazwisko</td>
-				<td>@pro.IdDruzyny</td>
+				<td><a href="/druzyny/@pro.IdDruzyny">@pro.IdDruzyny</a></td>
 				<td>
 					<button class="btn btn-primary oi oi-info" @onclick="(() => ShowPro(pro.Nick))"></button>
 				</td>
