--- a/ZBD/Pages/Przedmioty Folder/PrzedmiotyLista.razor
+++ b/ZBD/Pages/Przedmioty Folder/PrzedmiotyLista.razor
@@ -21,7 +21,7 @@
 		@foreach (var item in items)
 		{
 			<tr>
-				<img src="@item.Ikona" alt="@item.Nazwa" width="64px" height="64px"/>
+				<img src="@item.Ikona" alt="@item.Nazwa" width="96" height="96"/>
 				<td width="250px">@item.Nazwa</td>
 				<td width="250px">@item.Cena</td>
 				<td>@item.WartoscSprzedazy</td>
