--- a/ZBD/Pages/Bohaterowie Folder/BohaterowieAddUpdate.razor
+++ b/ZBD/Pages/Bohaterowie Folder/BohaterowieAddUpdate.razor
@@ -79,7 +79,7 @@
 			<div>
 				<label for="klasa">Klasa</label>
 				<InputSelect id="klasa" @bind-Value="champion.Klasa" class="form-control">
-					<option value="0">Wybierz</option>
+					<option value="0" hidden>Wybierz</option>
 					@foreach (var role in roles)
 					{
 						<option value="@role">@role</option>
@@ -136,7 +136,7 @@
 				{
 					<button type="button" class="btn btn-danger" @onclick="async ()=> await Delete(champion)">Usuń</button>
 				}
-				&nbsp;<button type="button" class="btn btn-secondary" @onclick="(() => Cancel(champion.Nazwa))">Anuluj</button>
+				&nbsp;<button type="button" class="btn btn-secondary" @onclick="(() => Cancel())">Anuluj</button>
 			</div>
 
 
@@ -220,9 +220,16 @@
 		}
 	}
 
-	private void Cancel(string name)
+	private void Cancel()
 	{
-		navManager.NavigateTo($"/bohaterowie/{name}", true);
+		if (name != null)
+		{
+			navManager.NavigateTo($"/bohaterowie/{name}", true);
+		}
+		else
+		{
+			navManager.NavigateTo($"/bohaterowie", true);
+		}
 	}
 
 	//private void ChangeCounters(string name, string firstCounterName, string secondCounterName, string thirdCounterName)
