--- a/ZBD/Pages/Gracze Folder/GraczeDisplay.razor
+++ b/ZBD/Pages/Gracze Folder/GraczeDisplay.razor
@@ -57,7 +57,7 @@
                         @if(game.BohaterowieNazwa != null)
                         {
                             <td>
-                                <img src="@getPlayed(game.BohaterowieNazwa)" width="96px" height="96px" />
+                                <a href="/bohaterowie/@game.BohaterowieNazwa"><img src="@getPlayed(game.BohaterowieNazwa)" width="96px" height="96px" /></a>
                             </td>
                         }
                         else
