--- a/ZBD/Shared/NavMenu.razor
+++ b/ZBD/Shared/NavMenu.razor
@@ -1,6 +1,7 @@
 ﻿@using ZBD.Authentication
 @using Microsoft.AspNetCore.Components.Authorization
 @inject AuthenticationStateProvider authStateProvider
+@using Models
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
